--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -10,6 +10,7 @@
 
   $a$ & Grain radius & \\
   $C$ & Courant-Friedrichs-Lewy condition & \\
+  $h_e$ & Electron transparency & \\
   $L_*$ & Stellar luminosity & \\
   $M_*$ & Stellar mass & \\
   $\dot M$ & Mass loss rate & \\
