--- a/References/library.bib
+++ b/References/library.bib
@@ -635,6 +635,21 @@
   file = {/home/joseph/Zotero/storage/R3DCMNWT/Eldridge et al. - 2013 - The death of massive stars – II. Observational con.pdf;/home/joseph/Zotero/storage/R7MQPI3T/976309.html}
 }
 
+@article{falleMultidimensionalUpwindScheme1998,
+  title = {A Multidimensional Upwind Scheme for Magnetohydrodynamics},
+  author = {Falle, S. A. E. G. and Komissarov, S. S. and Joarder, P.},
+  year = {1998},
+  month = jun,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {297},
+  number = {1},
+  pages = {265--277},
+  issn = {0035-8711},
+  doi = {10.1046/j.1365-8711.1998.01506.x},
+  abstract = {This paper describes a second-order upwind scheme for multidimensional magnetohydrodynamics, which uses a linear approximation for all Riemann problems except those involving strong rarefactions. This enables it to cope with initial data for which previously published schemes might fail. The condition {$\bigtriangledown\odot$}B = 0 is not enforced in multidimensions, but the numerical problems associated with this are dealt with by adding source terms to the equations, as suggested by Powell. We also show that there are advantages to adding second-order artificial dissipation at shocks.},
+  file = {/home/joseph/Zotero/storage/ZBQDKP5Z/Falle et al. - 1998 - A multidimensional upwind scheme for magnetohydrod.pdf;/home/joseph/Zotero/storage/75GJ7HMT/1019133.html}
+}
+
 @article{falleSelfsimilarJets1991,
   title = {Self-Similar Jets},
   author = {Falle, S. a. E. G.},
@@ -649,6 +664,36 @@
   abstract = {Abstract.  General arguments and numerical calculations are used to show that the flow caused by a superconic gas jet is self-similar under certain conditions.},
   language = {en},
   file = {/home/joseph/Zotero/storage/DNAMPN82/Falle - 1991 - Self-similar jets.pdf;/home/joseph/Zotero/storage/VBM8YL8N/1304.3456.pdf;/home/joseph/Zotero/storage/G48LX3GD/998455.html}
+}
+
+@article{falleSelfsimilarJets1991a,
+  title = {Self-Similar Jets},
+  author = {Falle, S. A. E. G.},
+  year = {1991},
+  month = jun,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {250},
+  number = {3},
+  pages = {581--596},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/250.3.581},
+  abstract = {General arguments and numerical calculations are used to show that the flow caused by a superconic gas jet is self-similar under certain conditions. If we assume that the jet has a high initial Mach number and is generated in a region small compared to its length, then the type of similarity solution depends on the density distribution of the gas through which the jet propagates. If this density decreases faster than 1/R2, where R is the distance from the source, then the length of the jet increases linearly with time and it may evolve into a classical double if it subsequently encounters a region of higher density. In a more slowly varying external density, the jet is reconfined, and the similarity exponent is the same as for an isotropic wind with a constant rate of energy input. At intermediate times this looks like a classical double, but at large times it has many of the characteristics of FRI sources},
+  file = {/home/joseph/Zotero/storage/AUED4V89/Falle - 1991 - Self-similar jets.pdf;/home/joseph/Zotero/storage/PTM9GB7N/998455.html}
+}
+
+@article{falleUpwindNumericalScheme1996,
+  title = {An Upwind Numerical Scheme for Relativistic Hydrodynamics with a General Equation of State},
+  author = {Falle, S. A. E. G. and Komissarov, S. S.},
+  year = {1996},
+  month = jan,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {278},
+  number = {2},
+  pages = {586--602},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/278.2.586},
+  abstract = {This paper describes a simple, second-order, upwind scheme for the equations of special relativistic hydrodynamics in multidimensions. A linear solver is used for all Riemann problems except those that contain strong rarefactions and, unlike previous algorithms, it is not restricted to an equation of state with a constant ratio of specific heats. Test calculations show that the scheme is accurate for flows containing extremely strong shocks and with Lorentz factors of several hundred. It has been combined with an adaptive hierarchical grid, which makes it possible to use high resolution in any number of dimensions.},
+  file = {/home/joseph/Zotero/storage/LJ4YMMDH/Falle and Komissarov - 1996 - An upwind numerical scheme for relativistic hydrod.pdf;/home/joseph/Zotero/storage/D8MVZD67/951980.html}
 }
 
 @article{fogCallingConventions,
@@ -1929,6 +1974,20 @@
   file = {/home/joseph/Zotero/storage/PESVPWBZ/Pittard and Dawson - 2018 - Colliding stellar winds structure and X-ray emissi.pdf;/home/joseph/Zotero/storage/TI6S74AD/4980945.html}
 }
 
+@article{pittardCollidingwindBinarySystems2020,
+  title = {Colliding-Wind Binary Systems: {{Diffusive}} Shock Acceleration and Non-Thermal Emission},
+  shorttitle = {Colliding-Wind Binary Systems},
+  author = {Pittard, J. M. and Vila, G. S. and Romero, G. E.},
+  year = {2020},
+  month = apr,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  publisher = {{Oxford University Press (OUP)}},
+  issn = {0035-8711},
+  abstract = {We present a model for the non-thermal emission from a colliding-wind binary. Relativistic protons and electrons are assumed to be accelerated through diffusive shock acceleration (DSA) at the global shocks bounding the wind-wind collision region. The non-linear effects of the back-reaction due to the cosmic ray pressure on the particle acceleration process and the cooling of the non-thermal particles as they flow downstream from the shocks are included. We explore how the non-thermal particle distribution and the keV-GeV emission changes with the stellar separation and the viewing angle of the system, and with the momentum ratio of the winds. We confirm earlier findings that DSA is very efficient when magnetic field amplification is not included, leading to significantly modified shocks. We also find that the non-thermal flux scales with the binary separation in a complicated way and that the anisotropic inverse Compton emission shows only a moderate variation with viewing angle due to the spatial extent of the wind-wind collision.},
+  language = {en},
+  file = {/home/joseph/Zotero/storage/ISANR3JK/Pittard et al. - 2020 - Colliding-wind binary systems Diffusive shock acc.pdf;/home/joseph/Zotero/storage/YK7LXME5/160181.html}
+}
+
 @article{pittardCollidingwindBinarySystems2020a,
   title = {Colliding-Wind Binary Systems: {{Diffusive}} Shock Acceleration and Non-Thermal Emission},
   shorttitle = {Colliding-Wind Binary Systems},
@@ -1945,6 +2004,26 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics},
   file = {/home/joseph/Zotero/storage/KRLRW72H/Pittard et al. - 2020 - Colliding-wind binary systems Diffusive shock acc.pdf;/home/joseph/Zotero/storage/HJNCUQVD/1912.html}
+}
+
+@article{pittardCollidingwindBinarySystems2020b,
+  title = {Colliding-Wind Binary Systems: {{Diffusive}} Shock Acceleration and Non-Thermal Emission},
+  shorttitle = {Colliding-Wind Binary Systems},
+  author = {Pittard, J. M. and Vila, G. S. and Romero, G. E.},
+  year = {2020},
+  month = jun,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {495},
+  number = {2},
+  eprint = {1912.05299},
+  eprinttype = {arxiv},
+  pages = {2205--2221},
+  issn = {0035-8711, 1365-2966},
+  doi = {10.1093/mnras/staa1099},
+  abstract = {We present a model for the non-thermal emission from a colliding-wind binary. Relativistic protons and electrons are assumed to be accelerated through diffusive shock acceleration (DSA) at the global shocks bounding the wind-wind collision region. The non-linear effects of the back-reaction due to the cosmic ray pressure on the particle acceleration process and the cooling of the non-thermal particles as they flow downstream from the shocks are included. We explore how the non-thermal particle distribution and the keV-GeV emission changes with the stellar separation and the viewing angle of the system, and with the momentum ratio of the winds. We confirm earlier findings that DSA is very efficient when magnetic field amplification is not included, leading to significantly modified shocks. We also find that the non-thermal flux scales with the binary separation in a complicated way and that the anisotropic inverse Compton emission shows only a moderate variation with viewing angle due to the spatial extent of the wind-wind collision.},
+  archiveprefix = {arXiv},
+  language = {en},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics}
 }
 
 @article{pollockEinsteinViewWolfRayet1987,
@@ -2083,6 +2162,14 @@
   abstract = {Wolf\textendash Rayet (WR) stars are evolved massive stars, presumably on their way to becoming supernovae. They are characterized by high luminosities and fast and dense stellar winds. We have detected signs of a radio continuum pinwheel associated with WR 147, a nitrogen-rich WR star with spectral subtype WN8. These structures are known to exist around a handful of late-type carbon-rich WR stars with massive companions where dust has formed in the zone where the two winds collide and produced a plume of dense gas and dust that is carried out with the WR wind. As the binary system rotates, an Archimedean spiral detectable in the infrared is formed. The resulting pinwheel contains information on wind speeds, wind-momentum ratio, and orbital parameters. However, WR 147 is a WN star and the formation of dust is unlikely, so a different emission mechanism must be at work. Our analysis of the data suggests that in this case the emission is dominantly of a nonthermal nature (synchrotron), although we cannot exclude the possibility that some clumps could be brighter in free\textendash free emission. It is possible that the pinwheels associated with WN stars will be detectable only as nonthermal emitters at radio wavelengths. From the characteristics of the pinwheel we estimate a period of 1.7 yr for the binary system (the WN8 star and a companion yet undetected directly) that is responsible for the pinwheel.},
   language = {en},
   file = {/home/joseph/Zotero/storage/LQ9SWISP/Rodríguez et al. - 2020 - A Radio Pinwheel Emanating from WR 147.pdf}
+}
+
+@article{rosasAMUSEingWindsBinary,
+  title = {{{AMUSE}}-Ing Winds in Binary Stars},
+  author = {Rosas, Martha Irene Saladino},
+  pages = {223},
+  language = {en},
+  file = {/home/joseph/Zotero/storage/3MWJ3KGL/Rosas - AMUSE-ing winds in binary stars.pdf}
 }
 
 @article{rossloweSpatialDistributionGalactic2015,
@@ -2233,6 +2320,22 @@
   abstract = {Context. Massive stars play a vital role in the Universe, however, their evolution even on the main-sequence is not yet well understood. {$<$}BR /{$>$} Aims: Because of the steep mass-luminosity relation, massive main-sequence stars become extremely luminous. This brings their envelopes very close to the Eddington limit. We analyse stellar evolutionary models in which the Eddington limit is reached and exceeded, explore the rich diversity of physical phenomena that take place in their envelopes, and investigate their observational consequences. {$<$}BR /{$>$} Methods: We use published grids of detailed stellar models, computed with a state-of-the-art, one-dimensional hydrodynamic stellar evolution code using LMC composition, to investigate the envelope properties of core hydrogen burning massive stars. {$<$}BR /{$>$} Results: We find that the Eddington limit is almost never reached at the stellar surface, even for stars up to 500 M\textsubscript{{$\Sun$}}. When we define an appropriate Eddington limit locally in the stellar envelope, we can show that most stars more massive than \textasciitilde 40 M\textsubscript{{$\Sun$}} actually exceed this limit, in particular, in the partial ionisation zones of iron, helium, or hydrogen. While most models adjust their structure such that the local Eddington limit is exceeded at most by a few per cent, our most extreme models do so by a factor of more than seven. We find that the local violation of the Eddington limit has severe consequences for the envelope structure, as it leads to envelope inflation, convection, density inversions, and, possibly to, pulsations. We find that all models with luminosities higher than 4 \texttimes{} 10\textsuperscript{5}L\textsubscript{{$\Sun$}}, i.e. stars above \textasciitilde 40 M\textsubscript{{$\Sun$}} show inflation, with a radius increase of up to a factor of about 40. We find that the hot edge of the S Dor variability region coincides with a line beyond which our models are inflated by more than a factor of two, indicating a possible connection between S Dor variability and inflation. Furthermore, our coolest models show highly inflated envelopes with masses of up to several solar masses, and appear to be candidates for producing major luminous blue variable eruptions. {$<$}BR /{$>$} Conclusions: Our models show that the Eddington limit is expected to be reached in all stars above \textasciitilde 40 M\textsubscript{{$\Sun$}} in the LMC, even in lower mass stars in the Galaxy, or in close binaries or rapid rotators. While our results do not support the idea of a direct super-Eddington wind driven by continuum photons, the consequences of the Eddington limit in the form of inflation, pulsations and possibly eruptions may well give rise to a significant enhancement of the time averaged mass-loss rate. {$<$}P /{$>$}Appendices are available in electronic form at {$<$}A href="http://www.aanda.org/10.1051/0004-6361/201525945/olm"{$>$}http://www.aanda.org{$<$}/A{$>$}},
   language = {en},
   file = {/home/joseph/Zotero/storage/5ISB3BUS/Sanyal et al. - 2015 - Massive main-sequence stars evolving at the Edding.pdf;/home/joseph/Zotero/storage/USL5JTP2/abstract.html}
+}
+
+@article{schureNewRadiativeCooling2009a,
+  title = {A New Radiative Cooling Curve Based on an Up-to-Date Plasma Emission Code},
+  author = {Schure, K. M. and Kosenko, D. and Kaastra, J. S. and Keppens, R. and Vink, J.},
+  year = {2009},
+  month = dec,
+  journal = {Astronomy \& Astrophysics},
+  volume = {508},
+  number = {2},
+  pages = {751--757},
+  issn = {0004-6361, 1432-0746},
+  doi = {10.1051/0004-6361/200912495},
+  abstract = {This work presents a new plasma cooling curve that is calculated using the SPEX package. We compare our cooling rates to those in previous works, and implement the new cooling function in the grid-adaptive framework ``AMRVAC''. Contributions to the cooling rate by the individual elements are given, to allow for the creation of cooling curves tailored to specific abundance requirements. In some situations, it is important to be able to include radiative losses in the hydrodynamics. The enhanced compression ratio can trigger instabilities (such as the Vishniac thin-shell instability) that would otherwise be absent. For gas with temperatures below 104 K, the cooling time becomes very long and does not affect the gas on the timescales that are generally of interest for hydrodynamical simulations of circumstellar plasmas. However, above this temperature, a significant fraction of the elements is ionised, and the cooling rate increases by a factor 1000 relative to lower temperature plasmas.},
+  language = {en},
+  file = {/home/joseph/Zotero/storage/GNQMR7TR/Schure et al. - 2009 - A new radiative cooling curve based on an up-to-da.pdf}
 }
 
 @article{soulain_sphere_2018,
