Another day another commit

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -1,4 +1,20 @@
 
+@article{1970ApJ...159..879L,
+  title = {Mass {{Loss}} by {{Hot Stars}}},
+  author = {Lucy, L. B. and Solomon, P. M.},
+  date = {1970-03-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {159},
+  pages = {879},
+  issn = {0004-637X},
+  doi = {10.1086/150365},
+  url = {https://ui.adsabs.harvard.edu/abs/1970ApJ...159..879L},
+  urldate = {2021-09-05},
+  abstract = {A mechanism is proposed to explain the mass loss observed for luminous, hot stars. We show that the ultraviolet resonance lines of ions such as Si iv, C iv, N v, and S vi can give strongly negative effective gravities in the outer parts of the reversing layers of hot stars. We argue that a static reversing layer is then no longer possible and that a continuous outflow of mass occurs. To calculate rates of mass loss resulting from this mechanism, we formulate the problem of steady-state, moving reversing layers. From numerical solutions of the equations of this problem, the rate of mass loss is found to be {$<$} L/c2 the evolution of the star is therefore not disturbed significantly. The domain in the (log , log g)-plane where the greatest rates of mass loss are expected is also approximately determined and found to be roughly consistent with observation. Finally, the problem of the supersonic flow to large distances from the star is briefly discussed.},
+  annotation = {ADS Bibcode: 1970ApJ...159..879L},
+  file = {/Users/py13je/Zotero/storage/PELUBA4C/Lucy and Solomon - 1970 - Mass Loss by Hot Stars.pdf}
+}
+
 @online{1987A171L1L,
   title = {{{1987A}}\&{{A}}...{{171L}}...{{1L Page L1}}},
   url = {http://adsabs.harvard.edu/full/1987A%26A...171L...1L},
@@ -28,6 +44,24 @@
   url = {http://adsabs.harvard.edu/full/2000A%26A...360..227N},
   urldate = {2021-07-08},
   file = {/Users/py13je/Zotero/storage/LNPBQRWE/2000A&A...360..html}
+}
+
+@article{2010ApJ...724L..90M,
+  title = {Population {{I Wolf}}-{{Rayet Runaway Stars}}: {{The Case}} of {{WR124}} and Its {{Expanding Nebula M1}}-67},
+  shorttitle = {Population {{I Wolf}}-{{Rayet Runaway Stars}}},
+  author = {Marchenko, S. V. and Moffat, A. F. J. and Crowther, P. A.},
+  date = {2010-11-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {724},
+  pages = {L90-L94},
+  issn = {0004-637X},
+  doi = {10.1088/2041-8205/724/1/L90},
+  url = {https://ui.adsabs.harvard.edu/abs/2010ApJ...724L..90M},
+  urldate = {2021-09-03},
+  abstract = {In 1997 and 2008 we used the WFPC2 camera on board the Hubble Space Telescope to obtain two sets of narrow-band H{$\alpha$} images of the runaway Wolf-Rayet (WR) star WR 124 surrounded by its nebula M1-67. This two-epoch imaging provides an expansion parallax and thus a practically assumption-free geometric distance to the nebula, d = 3.35 {$\pm$} 0.67 kpc. Combined with the global velocity distribution in the ejected nebula, this confirms the extreme runaway status of WR 124. WR stars embedded within such ejection nebulae at the point of core collapse would produce different supernova characteristics from those expected for stars surrounded by wind-filled cavities. In galaxies with extremely low ambient metallicity, Z {$<$}= 10-3 Z sun, {$\gamma$}-ray bursts originating from fast-moving runaway WR stars may produce afterglows which appear to be coming from regions with a relatively homogeneous circumburst medium.},
+  keywords = {Astrophysics - Solar and Stellar Astrophysics,gamma-ray burst: general,stars: distances,stars: individual: WR 124,stars: Wolf-Rayet,supernovae: general},
+  annotation = {ADS Bibcode: 2010ApJ...724L..90M},
+  file = {/Users/py13je/Zotero/storage/9NSQEWWQ/Marchenko et al. - 2010 - Population I Wolf-Rayet Runaway Stars The Case of.pdf}
 }
 
 @article{acheson_elementary_1991,
@@ -519,6 +553,25 @@
   langid = {english},
   keywords = {Astrophysics - Solar and Stellar Astrophysics},
   file = {/Users/py13je/Zotero/storage/IDSWSSTY/Das and Chakrabarti - 2011 - Composition and evolution of Interstellar Grain ma.pdf}
+}
+
+@article{debesMeasuringDwarfWinds2006,
+  title = {Measuring {{M Dwarf Winds}} with {{DAZ White Dwarfs}}},
+  author = {Debes, John H.},
+  date = {2006-11},
+  journaltitle = {The Astrophysical Journal},
+  shortjournal = {ApJ},
+  volume = {652},
+  number = {1},
+  pages = {636--642},
+  publisher = {{American Astronomical Society}},
+  issn = {0004-637X},
+  doi = {10.1086/508132},
+  url = {https://doi.org/10.1086/508132},
+  urldate = {2021-09-04},
+  abstract = {Hydrogen atmosphere white dwarfs with metal lines, so-called DAZs, show evidence for ongoing accretion of material onto their surfaces. Some DAZs are known to have unresolved M dwarf companions, which could account for the observed accretion through a stellar wind. I combine observed Ca abundances of the DAZs with information on the orbital separation of their M dwarf companions to infer the mass-loss rate of the M dwarfs. I find that for three of the six known DAZs with M dwarf companions, a stellar wind can plausibly explain the observed accretion on the white dwarfs assuming Bondi-Hoyle accretion of solar abundance stellar winds on the order of 10-14 to 10-16 M{$\Sun$} yr-1. The rest of the sample have companions with orbits {$\greaterequivlnt$}1 AU and require companion mass-loss rates of {$>$}10-11 M{$\Sun$} yr-1. I conclude that there must be an alternative explanation for accretion of material onto DAZs with widely separated companions. The inferred winds for two of the close binaries are orders of magnitude smaller than typically assumed for the angular momentum loss of red dwarf-white dwarf pairs due to magnetic braking from a stellar wind and may seriously affect predictions for the formation rate of CVs with low-mass companions.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/KCC42SC8/Debes - 2006 - Measuring M Dwarf Winds with DAZ White Dwarfs.pdf}
 }
 
 @book{delooreWolfRayetStarsObservations1982,
@@ -1056,6 +1109,24 @@
   pagetotal = {188},
   keywords = {Science / Physics / Astrophysics},
   file = {/Users/py13je/Zotero/storage/7MXEVXUP/Hartquist et al. - 2004 - Blowing Bubbles in the Cosmos Astronomical Winds,.pdf}
+}
+
+@article{heathHabitabilityPlanetsRed1999,
+  title = {Habitability of {{Planets Around Red Dwarf Stars}}},
+  author = {Heath, Martin J. and Doyle, Laurance R. and Joshi, Manoj M. and Haberle, Robert M.},
+  date = {1999-08-01},
+  journaltitle = {Origins of life and evolution of the biosphere},
+  shortjournal = {Orig Life Evol Biosph},
+  volume = {29},
+  number = {4},
+  pages = {405--424},
+  issn = {1573-0875},
+  doi = {10.1023/A:1006596718708},
+  url = {https://doi.org/10.1023/A:1006596718708},
+  urldate = {2021-09-04},
+  abstract = {Recent models indicate that relatively moderate climates could exist on Earth-sized planets in synchronous rotation around red dwarf stars. Investigation of the global water cycle, availability of photosynthetically active radiation in red dwarf sunlight, and the biological implications of stellar flares, which can be frequent for red dwarfs, suggests that higher plant habitability of red dwarf planets may be possible.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/J72HR43X/Heath et al. - 1999 - Habitability of Planets Around Red Dwarf Stars.pdf}
 }
 
 @article{hendrix_pinwheels_2016,
@@ -1952,6 +2023,25 @@
   file = {/Users/py13je/Zotero/storage/65KU2U2L/Owocki - 2004 - Stellar wind mechanisms and instabilities.pdf}
 }
 
+@article{owockiLinedrivenStellarWinds1999,
+  title = {Line-Driven {{Stellar Winds}}: {{The Dynamical Role}} of {{Diffuse Radiation Gradients}} and {{Limitations}} to the {{Sobolev Approach}}},
+  shorttitle = {Line-Driven {{Stellar Winds}}},
+  author = {Owocki, S. P. and Puls, J.},
+  date = {1999-01-01},
+  journaltitle = {The Astrophysical Journal},
+  shortjournal = {ApJ},
+  volume = {510},
+  number = {1},
+  pages = {355},
+  publisher = {{IOP Publishing}},
+  issn = {0004-637X},
+  doi = {10.1086/306561},
+  url = {https://iopscience.iop.org/article/10.1086/306561/meta},
+  urldate = {2021-09-05},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/RHJ2UAF9/Owocki and Puls - 1999 - Line-driven Stellar Winds The Dynamical Role of D.pdf;/Users/py13je/Zotero/storage/BKDY77BJ/306561.html}
+}
+
 @article{parkin_3d_2008,
   title = {A {{3D}} Dynamical Model of the Colliding Winds in Binary Systems},
   author = {Parkin, E. R. and Pittard, J. M.},
@@ -2261,6 +2351,14 @@
   pages = {209--325}
 }
 
+@article{pulsDiagnosticsWindMomentumLuminosity,
+  title = {Diagnostics and {{Wind}}-{{Momentum Luminosity Relation}}},
+  author = {Puls, Joachim},
+  pages = {45},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/WWBJJIZM/Puls - Diagnostics and Wind-Momentum Luminosity Relation.pdf}
+}
+
 @article{rauw_phase-resolved_2002,
   title = {Phase-Resolved {{X}}-Ray and Optical Spectroscopy of the Massive Binary {{HD}} 93403},
   author = {Rauw, Gr\'egor and Vreux, J-M and Stevens, IR and Gosset, Eric and Sana, Hugues and Jamar, Claude and Mason, KO},
@@ -2493,6 +2591,24 @@
   abstract = {This work presents a new plasma cooling curve that is calculated using the SPEX package. We compare our cooling rates to those in previous works, and implement the new cooling function in the grid-adaptive framework ``AMRVAC''. Contributions to the cooling rate by the individual elements are given, to allow for the creation of cooling curves tailored to specific abundance requirements. In some situations, it is important to be able to include radiative losses in the hydrodynamics. The enhanced compression ratio can trigger instabilities (such as the Vishniac thin-shell instability) that would otherwise be absent. For gas with temperatures below 104 K, the cooling time becomes very long and does not affect the gas on the timescales that are generally of interest for hydrodynamical simulations of circumstellar plasmas. However, above this temperature, a significant fraction of the elements is ionised, and the cooling rate increases by a factor 1000 relative to lower temperature plasmas.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/GNQMR7TR/Schure et al. - 2009 - A new radiative cooling curve based on an up-to-da.pdf}
+}
+
+@article{seeEffectsStellarWinds2014,
+  title = {The Effects of Stellar Winds on the Magnetospheres and Potential Habitability of Exoplanets},
+  author = {See, V. and Jardine, M. and Vidotto, A. A. and Petit, P. and Marsden, S. C. and Jeffers, S. V. and do Nascimento, J. D.},
+  date = {2014-10-01},
+  journaltitle = {Astronomy \& Astrophysics},
+  shortjournal = {A\&A},
+  volume = {570},
+  pages = {A99},
+  publisher = {{EDP Sciences}},
+  issn = {0004-6361, 1432-0746},
+  doi = {10.1051/0004-6361/201424323},
+  url = {https://www.aanda.org/articles/aa/abs/2014/10/aa24323-14/aa24323-14.html},
+  urldate = {2021-09-04},
+  abstract = {\emph{Context. {$<$}i/{$>$}The principle definition of habitability for exoplanets is whether they can sustain liquid water on their surfaces, i.e. that they orbit within the habitable zone. However, the planet's magnetosphere should also be considered, since without it, an exoplanet's atmosphere may be eroded away by stellar winds.\emph{Aims. {$<$}i/{$>$}The aim of this paper is to investigate magnetospheric protection of a planet from the effects of stellar winds from solar-mass stars.\emph{Methods. {$<$}i/{$>$}We study hypothetical Earth-like exoplanets orbiting in the host star's habitable zone for a sample of 124 solar-mass stars. These are targets that have been observed by the Bcool Collaboration. Using two wind models, we calculate the magnetospheric extent of each exoplanet. These wind models are computationally inexpensive and allow the community to quickly estimate the magnetospheric size of magnetised Earth-analogues orbiting cool stars.\emph{Results. {$<$}i/{$>$}Most of the simulated planets in our sample can maintain a magnetosphere of \textasciitilde 5 Earth radii or larger. This suggests that magnetised Earth analogues in the habitable zones of solar analogues are able to protect their atmospheres and is in contrast to planets around young active M dwarfs. In general, we find that Earth-analogues around solar-type stars, of age 1.5 Gyr or older, can maintain at least a Paleoarchean Earth sized magnetosphere. Our results indicate that planets around 0.6\textendash 0.8 solar-mass stars on the low activity side of the Vaughan-Preston gap are the optimum observing targets for habitable Earth analogues.}}}}},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/XZYQN69U/See et al. - 2014 - The effects of stellar winds on the magnetospheres.pdf;/Users/py13je/Zotero/storage/NISNKZXD/aa24323-14.html}
 }
 
 @online{soulain_sphere_2018,
