--- a/Thesis.tex
+++ b/Thesis.tex
@@ -36,11 +36,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{\myTitle}
 \author{\href{mailto:\authorEmail}{\theAuthor}}
-\crest{\includegraphics[width=35mm]{Leeds_Crest.png}}
+\crest{\includegraphics[width=35mm]{Leeds_Crest.eps}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Define these as empty to omit the two logos on the title page
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\logo{\includegraphics[width=50mm]{UoL_logo}} %University Logo
+\logo{\includegraphics[width=50mm]{Leeds.pdf}} %University Logo
 \deptlogo{} %\includegraphics[width=50mm]{UoL_logo}} % Institute Logo
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \collegeordept{\href{http://physics.leeds.ac.uk}{School of Physics and Astronomy}}
